--- a/landing.css
+++ b/landing.css
@@ -309,3 +309,117 @@ display: none;
 font-size: 62.5%;
 font-family: 'Roboto Condensed', sans-serif;
 }
+
+/* GENERAL STYLES */
+body {
+    font-size: montserrat;
+}
+
+/* NAVIGATION */
+nav ul li {
+    list-style: none;
+    display: inline-block;
+    margin: 0 8px;
+    line-height: 80px;
+}
+
+nav ul {
+    padding: 0;
+    margin: 0;
+    float: right;
+    margin-right: 40px;
+}
+nav a {
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+    padding: 7px 10px;
+    border-radius: 3px;
+}
+
+a.active, a:hover{
+    border: 1px solid black;
+    transition: .5s;
+}
+
+nav {
+    height: 80px;
+    width: 100%;
+    background: #fafafa;
+}
+
+nav #icon {
+    color: black;
+    font-size: 30px;
+    line-height: 80px;
+    float: right;
+    margin-right: 40px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+label.logo {
+    font-size: 35px;
+    font-weight: bold;
+    /* color: */
+    padding: 0 100px;
+    line-height: 80px;
+}
+
+
+/* MEDIA QUERIES */
+
+/* Navigation */
+@media (max-width: 1000px) { /*1048*/
+    label.logo {
+        font-size: 32px;
+        padding-left: 60px;
+    }
+
+    nav ul{
+        margin-right: 20px;
+    }
+    
+    nav a {
+        font-size: 17px;
+    }
+}
+
+@media (max-width: 800px){ /*909*/
+    nav #icon {
+        display: block;
+    }
+
+    nav ul {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #fafafa;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+
+    nav a {
+        font-size: 20px;
+    }
+
+    a.active, a:hover{
+        border: none;
+        color: #f10
+    }
+
+    nav ul.show{
+        left: 0;
+    }
+}
